--- a/LES1_2019_web/WebContent/WEB-INF/web.xml
+++ b/LES1_2019_web/WebContent/WEB-INF/web.xml
@@ -19,40 +19,32 @@
 
 	<servlet-mapping>
 		<servlet-name>Servlet</servlet-name>
-		<url-pattern>/SalvarProduto</url-pattern>
+		<url-pattern>/Produtos</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
 		<servlet-name>Servlet</servlet-name>
-		<url-pattern>/ExcluirProduto</url-pattern>
+		<url-pattern>/DadosProduto</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
 		<servlet-name>Servlet</servlet-name>
-		<url-pattern>/AlterarProduto</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>Servlet</servlet-name>
-		<url-pattern>/MostrarProduto</url-pattern>
-	</servlet-mapping>
-	
-		<servlet-mapping>
-		<servlet-name>Servlet</servlet-name>
-		<url-pattern>/SalvarCategoria</url-pattern>
+		<url-pattern>/User</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
 		<servlet-name>Servlet</servlet-name>
-		<url-pattern>/ExcluirCategoria</url-pattern>
+		<url-pattern>/Enderecos</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
 		<servlet-name>Servlet</servlet-name>
-		<url-pattern>/AlterarCategoria</url-pattern>
+		<url-pattern>/Cartoes</url-pattern>
 	</servlet-mapping>
+	
 	<servlet-mapping>
 		<servlet-name>Servlet</servlet-name>
-		<url-pattern>/MostrarCategoria</url-pattern>
+		<url-pattern>/Pedidos</url-pattern>
 	</servlet-mapping>
 	
 </web-app>
